# GLearn

./: .gitignore  CMakeLists.txt
include/GLearn/Data/: Data.hpp  Model.hpp
include/GLearn/NeuralNetwork/: ActivationFunctions.hpp  Derivatives.hpp  ErrorFunctions.hpp  Mean.hpp  Model.hpp  Network.hpp
src/Data/: CMakeLists.txt  Data.cpp  Model.cpp
src/NeuralNetwork/: ActivationFunctions.cpp  CMakeLists.txt  ErrorFunctions.cpp  Mean.cpp  Network.cpp
src/tests/: CMakeLists.txt  main.cpp
