cmake_minimum_required(VERSION 3.15)
project(GLearn-NeuralNetwork CXX)

if(BUILD_SHARED_LIBS)
  message(STATUS "-------------------------------------------------")
  message(STATUS "BUILDING GLearn-NeuralNetwork as a SHARED LIBRARY")
  message(STATUS "-------------------------------------------------")
else()
  message(STATUS "-------------------------------------------------")
  message(STATUS "BUILDING GLearn-NeuralNetwork as a STATIC LIBRARY")
  message(STATUS "-------------------------------------------------")
endif()

file(GLOB SOURCES "*.cpp")
add_library(GLearn-NeuralNetwork ${SOURCES})
target_include_directories(GLearn-NeuralNetwork PRIVATE ../../include/)
target_include_directories(GLearn-NeuralNetwork PUBLIC ../../external/json/include/)
target_link_libraries(GLearn-NeuralNetwork PRIVATE nlohmann_json::nlohmann_json)